test/sema/trait_objects/qualified_path_call_method_referencing_self.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {
  fn ptr(s: *Self) {}
  fn mutPtr(s: *mut Self) {}
  fn out(s: borrowed Self) {}
  fn val(s: Self) {}

  fn retPtr(): *Self;
  fn retMut(): *mut Self;
  fn retVal(): Self;
}

struct S {
  impl A {
    fn retPtr(): *Self {
      return gc(Self{});
    }

    fn retMut(): *mut Self {
      return gcMut(Self{});
    }

    fn retVal(): Self {
      return Self{};
    }
  }
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:21: error: methods with parameters referecing 'Self' cannot be called with trait objects
  @<impl A impl A>::ptr(gc(S{}));

  // CHECK: [[# @LINE + 1 ]]:21: error: methods with parameters referecing 'Self' cannot be called with trait objects
  @<impl A impl A>::mutPtr(gcMut(S{}));
  
  mut s = S{};

  // CHECK: [[# @LINE + 1 ]]:21: error: methods with parameters referecing 'Self' cannot be called with trait objects
  @<impl A impl A>::out(s);

  // CHECK: [[# @LINE + 1 ]]:21: error: methods with parameters referecing 'Self' cannot be called with trait objects
  @<impl A impl A>::val(s);

  // CHECK: [[# @LINE + 1 ]]:21: error: methods with return type referencing 'Self' cannot be called with trait objects
  @<impl A impl A>::retPtr();

  // CHECK: [[# @LINE + 1 ]]:21: error: methods with return type referencing 'Self' cannot be called with trait objects
  @<impl A impl A>::retMut();

  // CHECK: [[# @LINE + 1 ]]:21: error: methods with return type referencing 'Self' cannot be called with trait objects
  @<impl A impl A>::retVal();
}
